force-app/main/default/objects/RaceConditionFlag__c/RaceConditionFlag__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Object to control single access to critical resources (race condition)</description>
    <label>PORSA Race Condition Locks</label>
</CustomObject>