force-app/main/default/objects/RaceConditionFlag__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the resource is locked</description>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>