force-app/main/default/objects/RaceConditionFlag__c/fields/LockedTime__c.field-meta.xml
<CustomField>
    <fullName>LockedTime__c</fullName>
    <label>LockedTime</label>
    <type>DateTime</type>
</CustomField>