force-app/main/default/objects/RaceConditionFlag__c/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <description>PIN to lock the queue</description>
    <label>PIN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>