force-app/main/default/objects/RaceConditionFlag__c/fields/ResourceName__c.field-meta.xml
<CustomField>
    <fullName>ResourceName__c</fullName>
    <description>Name of the control resource</description>
    <label>Resource Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>